# OpenGL-scenegraph

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_all.bash  build_all.bat  setup_env.bash  setup_env.bat  setup_vs.bat  vrlib.cbp
CMakeModules/: FindAssimp.cmake  FindGLM.cmake
dependencies/SOIL/: CMakeLists.txt
dependencies/assimp-3.3.1/code/: CMakeLists.txt
dependencies/glew-2.0.0/: CMakeLists.txt
dependencies/jpeg/: CMakeLists.txt
dependencies/jpeg/jpeg-7/: CMakeLists.txt  ansi2knr.c  jconfig.h.in  jmorecfg.h
dependencies/png/: CMakeLists.txt
dependencies/png/libpng-1.2.39/: CMakeLists.txt  libpng-config  libpng.pc  libpng12-config  libpng12.pc
dependencies/png/libpng-1.2.39/scripts/: CMakeLists.txt
dependencies/zlib/: CMakeLists.txt
dependencies/zlib/zlib-1.2.3/: CMakeLists.txt  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  example.c  gzio.c  minigzip.c  trees.c  uncompr.c  zconf.h  zconf.in.h  zutil.c  zutil.h
dependencies/zlib/zlib-1.2.3/contrib/iostream2/: zstream.h
include/vr/: CodeLineException.h  DrawText.h  FileSystem.h  FrameBufferObject.h  RenderBuffer.h  Timer.h  glErrorUtil.h  glUtils.h  shaderUtils.h
installed/lib/pkgconfig/: assimp.pc
installed/lib/x86_64-linux-gnu/pkgconfig/: glm.pc
models/: texturedBox.mtl
scenegraph/: CMakeLists.txt  camera.cpp  geometry.cpp  group.cpp  init_visitor.cpp  light.cpp  loader.cpp  material.cpp  render_visitor.cpp  scene.cpp  scenegraph_main.cpp  shader_utils.cpp  state.cpp  texture.cpp  transform.cpp  update_callback_transform.cpp  update_visitor.cpp
scenegraph/headers/: bounding_box.h  camera.h  geometry.h  group.h  init_visitor.h  light.h  loader.h  material.h  node.h  node_visitor.h  render_visitor.h  scene.h  shader_utils.h  state.h  texture.h  transform.h  update_callback.h  update_callback_geometry.h  update_callback_group.h  update_callback_transform.h  update_visitor.h
scenes/: example.xml  house.xml  party.xml
shaders/: phong-shading.frag.glsl  phong-shading.vert.glsl
src/: CMakeLists.txt  DrawText.cpp  FileSystem.cpp  FrameBufferObject.cpp  RenderBuffer.cpp  Timer.cpp  glErrorUtil.cpp  glUtils.cpp  shaderUtils.cpp
