PROJECT (soil)

cmake_minimum_required(VERSION 2.8)

OPTION(SOIL_DYNAMIC "Enable to build dynamic library" OFF)

IF (SOIL_DYNAMIC)
        SET(BUILD_MODE SHARED)
        SET(CMAKE_MACOSX_RPATH 1)
        ADD_DEFINITIONS(-DSOIL_LIBRARY )
ELSE (SOIL_DYNAMIC)
        SET(BUILD_MODE STATIC)
ENDIF()

FIND_PACKAGE(OpenGL REQUIRED)


SET(LIBRARY_OUTPUT_PATH ${soil_BINARY_DIR}/lib)

SET(CMAKE_DEBUG_POSTFIX "d")

INCLUDE_DIRECTORIES(src)

FILE(GLOB SOIL_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h )
FILE(GLOB SOIL_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c )

ADD_LIBRARY(soil ${BUILD_MODE} ${SOIL_SRC} ${SOIL_HEADERS})

TARGET_LINK_LIBRARIES(soil ${OPENGL_LIBRARIES} )


INSTALL(TARGETS soil RUNTIME DESTINATION bin ARCHIVE DESTINATION lib LIBRARY DESTINATION lib )
INSTALL(FILES ${SOIL_HEADERS} DESTINATION include COMPONENT headers )
