PROJECT (glew)

cmake_minimum_required(VERSION 3.0)

OPTION(GLEW_DYNAMIC "Enable to build dynamic library" ON)

IF (GLEW_DYNAMIC)
        SET(BUILD_MODE SHARED)
        SET(CMAKE_MACOSX_RPATH 1)
        ADD_DEFINITIONS(-DGLEW_LIBRARY )
ELSE (GLEW_DYNAMIC)
        SET(BUILD_MODE STATIC)
ENDIF()

FIND_PACKAGE( OpenGL )


ADD_DEFINITIONS(-DGLEW_BUILD)
SET(LIBRARY_OUTPUT_PATH ${glew_BINARY_DIR}/lib)

SET(CMAKE_DEBUG_POSTFIX "d")

INCLUDE_DIRECTORIES(include)

FILE(GLOB GLEW_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/GL/*.h )
set(GLEW_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/glew.c ${GLEW_HEADERS} )

ADD_LIBRARY(glew ${BUILD_MODE} ${GLEW_SOURCES})
TARGET_LINK_LIBRARIES( glew ${OPENGL_LIBRARY} )


INSTALL(TARGETS glew RUNTIME DESTINATION bin ARCHIVE DESTINATION lib LIBRARY DESTINATION lib )
INSTALL(FILES include/GL/glew.h DESTINATION include/GL/ COMPONENT headers )
